# taskui-python

./: .gitignore  ACTION_PLAN.md  ARCHITECTURE_REVIEW.md  CODEBASE_CLEANUP_RECOMMENDATIONS.md  CODE_MAP.md  COLUMN_REFACTOR_CONFIG_CHANGES.md  COLUMN_REFACTOR_PLAN.md  COLUMN_REFACTOR_TEST_CHANGES.md  CONFIG_DRIVEN_NESTING_DESIGN.md  CONFIG_DRIVEN_QUICK_SUMMARY.md  LISTBAR_REDESIGN_PROPOSAL.md  NESTING_INVESTIGATION.md  NESTING_QUICK_SUMMARY.md  ONE_MONOKAI_COLOR_ANALYSIS.md  README.md  REQUIREMENTS.md  TEST_SUITE_RECOMMENDATIONS.md  TEXTUAL_UX_RESEARCH.md  config.ini.example  findings.md  nesting.toml  nesting.toml.example  pyproject.toml  pytest.ini  requirements.txt  setup.py  test_app_taskui.db  test_output.txt  test_results.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: lint.yml  tests.yml
.serena/: project.yml
.serena/memories/: architecture_overview.md  code_style_conventions.md  project_purpose.md  suggested_commands.md  task_completion_checklist.md  tech_stack.md
config/: .gitignore  README.md  settings.ini.example
docs/: CLOUD_PRINT_QUICKSTART.md  LOGGING_GUIDE.md  NESTING_RESEARCH.MD  PRINTER_SETUP_GUIDE.md  PRINTER_TROUBLESHOOTING.md  PRINT_TASKS.md  QUICKSTART.md  TESTING_GUIDE.md  WORKFLOW.md  action_plan.md  cloud_printing_setup.md  codebase_refactor_action_plan.md  config.ini.example  diary_implementation.md  logging_infrastructure_review.md  notepad.md  printing.md  spec-mvp.md  spec.md  task-app-final-mockup.html  tasks.md  testing-best-practices-summary.md
scripts/: diagnose_printer.py  diagnose_printer_basic.py  generate_encryption_key.py  issue-workflow.sh  pi_print_worker.py  taskui-printer.service  test_aws_connectivity.py  test_cut_commands.py  test_cut_modes.py  test_encryption.py  test_minimal_card.py  test_printer_connection.py  test_printer_cups.py  test_printer_port.py  test_raw_escpos.py  test_task_with_notes.py  validate_printer.py
taskui/: __init__.py  __main__.py  config.py  database.py  export_schema.py  logging_config.py  models.py  schema.sql
taskui/config/: __init__.py  nesting_config.py
taskui/services/: __init__.py  cloud_print_queue.py  diary_service.py  encryption.py  export_import.py  list_service.py  manual_sync.py  nesting_rules.py  nesting_validation.py  pending_operations.py  printer_service.py  sync_client.py  sync_operations.py  sync_queue.py  sync_v2.py  task_service.py
taskui/ui/: __init__.py  app.py  base_styles.py  constants.py  keybindings.py  theme.py
tests/: __init__.py  conftest.py  test_app.py  test_archive_modal.py  test_column.py  test_column2_updates.py  test_config.py  test_database.py  test_detail_panel.py  test_export_import.py  test_integration_mvp.py  test_keyboard_navigation.py  test_list_bar.py  test_list_service.py  test_list_service_pending_queue.py  test_logging_config.py  test_manual_sync.py  test_models.py  test_nesting_rules.py  test_pending_operations.py  test_persistence.py  test_printer_service.py  test_refresh_helper.py  test_sync_operations.py  test_sync_queue.py  test_sync_v2.py  test_task_editing.py  test_task_item.py  test_task_modal.py  test_task_service.py  test_ui_components.py
(+24 files in other folders)
